# bib-extractor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  fetch_bibtex.py  pyproject.toml  test_v14.json  test_v14_clean.json  test_v14_perfect.json  test_v14_robust.json
.github/workflows/: ci.yml  publish.yml
src/bib_extractor/: __main__.py  extract_bib_info.py  fetch_bibtex.py
