[project]
name = "bib-extractor"
version = "0.1.3"
description = "Extract DOIs or titles from PDF papers and generate a BibTeX bibliography"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "msrtarit"}]
license = {text = "MIT"}
keywords = ["bibtex", "doi", "pdf", "extractor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/msrtarit/bib_extractor"
Repository = "https://github.com/msrtarit/bib_extractor.git"

[project.scripts]
bib-extractor = "bib_extractor.extract_bib_info:main"
bib-fetch = "bib_extractor.fetch_bibtex:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
